# photo-metadata-overlay

./: .gitignore
.kiro/specs/photo-metadata-overlay/: design.md  requirements.md  tasks.md
photo-metadata-overlay/: .eslintrc.json  BUILD.md  BUILD_REPORT.md  CUSTOM_LAYOUT_DEBUG_UPDATED.md  CUSTOM_LAYOUT_FIX.md  DEMO.md  DRAG_POSITION_FIX.md  MANUAL_TEST.md  NATIVE_DRAG_FIX.md  PERFORMANCE_REPORT.md  PREVIEW_FIX_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SAVE_DIALOG_TEST.md  SAVE_STATUS_FIX.md  TEST_REPORT.md  USER_GUIDE.md  eslint.config.js  package-lock.json  package.json  platform-compatibility-report.json  tailwind.config.js  test-api.html  test-backend.js  test-frontend-processing.html
photo-metadata-overlay/.github/workflows/: build-release.yml
photo-metadata-overlay/scripts/: build-all-platforms.cjs  test-platform-compatibility.cjs
photo-metadata-overlay/src/: App.css  App.tsx
photo-metadata-overlay/src-tauri/: Cargo.toml  tauri.conf.json
photo-metadata-overlay/src-tauri/capabilities/: default.json
photo-metadata-overlay/src-tauri/src/: exif_service.rs  image_processing.rs  lib.rs  main.rs  test_utils.rs  types.rs  unified_engine.rs
photo-metadata-overlay/src/__tests__/: performance.test.ts
photo-metadata-overlay/src/components/: KeyboardShortcutManager.tsx
photo-metadata-overlay/src/constants/: design-tokens.ts
photo-metadata-overlay/src/demo/: AnimationDemo.tsx
photo-metadata-overlay/src/hooks/: useAppStatus.ts  useAutoSave.ts  useBatchProcessor.ts  useFileManager.ts  useFileSave.ts  useImagePreview.ts  useKeyboardShortcuts.ts  useToast.ts  (+2 more)
(+72 files in other folders)
