[package]
name = "photo-metadata-overlay"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "photo_metadata_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 图像处理相关依赖
image = { version = "0.24", features = ["jpeg", "png"] }
imageproc = "0.23"
rusttype = "0.9"
# EXIF数据读取
kamadak-exif = "0.5"
# 异步处理
tokio = { version = "1", features = ["full"] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 文件系统操作
uuid = { version = "1.0", features = ["v4"] }
# 全局静态变量
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.0"

